--- a/templates/admin/videos/add.html
+++ b/templates/admin/videos/add.html
@@ -1,7 +1,7 @@
 <div class="wrap">
   <div id="icon-edit" class="icon32 icon32-posts-post"><br></div>
   <h2>Add New Video</h2>
-  <form id="video" method="post" class="form-wrap">
+  <form id="video" method="post" class="form-wrap" action="admin.php?page=gd-videos-add">
     <div class="metabox-holder">
       <div id="poststuff">
 
@@ -11,11 +11,11 @@
             <h3>Video size</h3>
             <div class="form-field form-required">
               <label>Width</label>
-              <input type="text">
+              <input type="text" name="video_width">
             </div>
             <div class="form-field form-required">
               <label>Height</label>
-              <input type="text">
+              <input type="text" name="video_height">
             </div>
           </div> <!-- stuffbox videosize -->
 
@@ -26,7 +26,7 @@
               <div id="col-right" style="width:72%">
                 <div class="col-wrap">
                   <label>URL</label>
-                  <input type="text" name="Source" style="width:80%">
+                  <input type="text" name="urls[]" style="width:80%">
                   <button class="button">+</button>
                 </div>
               </div>
@@ -34,7 +34,7 @@
               <div id="col-left" style="width:25%">
                 <div class="col-wrap">
                   <label>Format</label>
-                  <select>
+                  <select name="formats[]">
                     <option value='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'>
                       MP4
                     </option>
@@ -65,20 +65,23 @@
 
           <div class="form-field">
             <label>Date</label>
-            <input type="text" name="title" id="title">
+            <input type="text" name="date" id="date" class="date">
             <p>This is the date that will be shown to the end user</p>
           </div>
 
           <div class="form-field form-required">
             <label>Author</label>
-            <input type="text" name="title" id="title">
+            <input type="text" name="author" id="author">
             <p>The author's name (More than one values are accepted)</p>
           </div>
 
           <div class="form-field form-required">
             <label>License</label>
-            <select>
-              <option value="text"></option>
+            <select name="license">
+              <option value="cc-by-sa">
+                Creative Commons - Atribuição - Partilha nos Mesmos
+                Termos 3.0 Não Adaptada.
+              </option>
             </select>
           </div>
 
@@ -94,7 +97,9 @@
 
 
         <p class="submit">
-          <button class="button">Add new video</button>
+          <button class="button">
+            Add new video
+          </button>
         </p>
 
       </div> <!-- #poststuff -->
