Adição do campo "Status" no tipo video

--- a/templates/admin/videos/add.html
+++ b/templates/admin/videos/add.html
@@ -141,6 +141,16 @@
             </div>
           </div> <!-- stuffbox sources -->
 
+          <div class="stuffbox">
+            <h3>Publishing options</h3>
+            <div class="form-field">
+              <label>
+                <input type="checkbox" name="status" value="1">
+                Publish after creating
+              </label>
+            </div>
+          </div>
+
         </div> <!-- #col-right -->
 
         <div id="col-left" class="stuffbox" style="width:48%">
