--- a/templates/admin/videos/listing.html
+++ b/templates/admin/videos/listing.html
@@ -14,7 +14,7 @@
       {% for video in listing %}
       <tr>
         <td>
-          Thumb
+          <img alt="{{ video.title }}" src="{{ video.thumbnail }}">
         </td>
         <td>
           <strong><a href="#">{{ video.title }}</a></strong>
