Editando dados do video (tudo menos os sources)

--- a/templates/admin/videos/add.html
+++ b/templates/admin/videos/add.html
@@ -166,7 +166,7 @@
             <div class="form-field">
               <label>
                 <input
-                   {% if video.status %}checked="checked"{% endif %}
+                   {% if fields.status %}checked="checked"{% endif %}
                    type="checkbox" name="status" value="1">
                 Publish video
               </label>
