Pequeno detalhe de layout no form de adição/edição de videos

--- a/templates/admin/videos/add.html
+++ b/templates/admin/videos/add.html
@@ -168,6 +168,7 @@
               <label>
                 <input
                    {% if fields.status %}checked="checked"{% endif %}
+                   style="width:auto!important;"
                    type="checkbox" name="status" value="1">
                 Publish video
               </label>
