Adicionando o campo "highlight" no tipo video
Esse campo será usado para definir se o video aparece ou não na capa
do site.

--- a/templates/admin/videos/add.html
+++ b/templates/admin/videos/add.html
@@ -173,6 +173,15 @@
                 Publish video
               </label>
             </div>
+            <div class="form-field">
+              <label>
+                <input
+                   {% if fields.highlight %}checked="checked"{% endif %}
+                   style="width:auto!important;"
+                   type="checkbox" name="highlight" value="1">
+                Highlight video
+              </label>
+            </div>
           </div>
 
         </div> <!-- #col-right -->
