--- a/templates/admin/videos/listing.html
+++ b/templates/admin/videos/listing.html
@@ -39,7 +39,8 @@
         <td class="column-title">{{ video.description }}</td>
         <td class="date column-date">
           <abbr>{{ video.date|date("d/m/Y") }}</abbr><br>
-          {% if not video.status %}Not{% endif %} Published
+          {% if not video.status %}Not{% endif %} Published<br>
+          {% if not video.highlight %}Not{% endif %} Highlighted
         </td>
       </tr>
       {% endfor %}
