--- a/templates/admin/videos/add.html
+++ b/templates/admin/videos/add.html
@@ -86,6 +86,13 @@
                       <select name="formats[]">
                         <option value=""></option>
                         <option
+                           {% if 'application/x-mpegURL' in source.format %}
+                           selected="selected"
+                           {% endif %}
+                           value='application/x-mpegURL'>
+                          m3u8
+                        </option>
+                        <option
                            {% if 'video/mp4' in source.format %}
                            selected="selected"
                            {% endif %}
@@ -136,6 +143,9 @@
                       <label>Format</label>
                       <select name="formats[]">
                         <option value=""></option>
+                        <option value='application/x-mpegURL'>
+                          m3u8
+                        </option>
                         <option value='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'>
                           MP4
                         </option>
