--- a/templates/admin/govp/listing.html
+++ b/templates/admin/govp/listing.html
@@ -18,9 +18,9 @@
       {% for contrib in listing %}
 
         {% if contrib.status == 1 %}
-      <tr class="approved">
+      <tr class="wpgd-approved">
         {% else %}
-      <tr class="disapproved">
+      <tr class="wpgd-disapproved">
         {% endif %}
 
         <td class="contrib-status"
