Possível fix de encoding [requer iconv] (Closes: 273)

--- a/templates/admin/govp/listing.html
+++ b/templates/admin/govp/listing.html
@@ -1,5 +1,5 @@
 <div class="wrap">
-  <h2>{{ count }} Contribuições  <a href="javascript:add_new_contrib()" class="add-new-h2">Add New</a></h2>
+  <h2>{{ count }} Contributions  <a href="javascript:add_new_contrib()" class="add-new-h2">Add New</a></h2>
 
   <div class="wpgd-new-contrib" style="display:none">
     Theme:<select class="wpgd-theme">
