Implementado ordenação dos registros (Closes: 280)

--- a/templates/admin/govp/listing.html
+++ b/templates/admin/govp/listing.html
@@ -30,13 +30,13 @@
   <table class="wp-list-table widefat fixed audiences" cellspacing="0">
     <thead>
       <tr>
-        <th style="width:5%">ID</th>
-        <th style="width:7%">Approved?</th>
+        <th style="width:5%"><a href="{{pageurl}}&sort=id">ID</a></th>
+        <th style="width:7%"><a href="{{pageurl}}&sort=status">Approved?</a></th>
         <th style="width:6%">Parent</th>
-        <th style="width:7%">Theme</th>
-        <th class="column-date" style="width:8%">Creation date</th>
-        <th style="width:10%">Author</th>
-        <th style="width:15%">Title</th>
+        <th style="width:7%"><a href="{{pageurl}}&sort=theme">Theme</a></th>
+        <th class="column-date" style="width:8%"><a href="{{pageurl}}&sort=date">Creation date</a></th>
+        <th style="width:10%"><a href="{{pageurl}}&sort=author">Author</a></th>
+        <th style="width:15%"><a href="{{pageurl}}&sort=title">Title</a></th>
         <th>Content</th>
       </tr>
     </thead>
