--- a/templates/admin/govp/listing.html
+++ b/templates/admin/govp/listing.html
@@ -133,4 +133,15 @@
       </tr>
     </tfoot>
   </table>
+  {% if paged > 0 %}
+  <a href="{{pageurl}}&paged={{paged-1}}">previous</a>
+  {% else %}
+  previous
+  {% endif %}
+  ({{paged+1}}/{{numpages}})
+  {% if count / perpage >  (paged+1) %}
+    <a href="{{pageurl}}&paged={{paged+1}}">next</a>
+  {% else %}
+    next
+  {% endif %}
 </div>
