--- a/templates/admin/govp/listing.html
+++ b/templates/admin/govp/listing.html
@@ -32,7 +32,7 @@
       <tr>
         <th style="width:5%"><a href="{{pageurl}}&sort=id">ID</a></th>
         <th style="width:7%"><a href="{{pageurl}}&sort=status">Approved?</a></th>
-        <th style="width:6%">Parent</th>
+        <th style="width:8%">Duplicate of</th>
         <th style="width:10%"><a href="{{pageurl}}&sort=theme">Theme</a></th>
         <th class="column-date" style="width:8%"><a href="{{pageurl}}&sort=date">Creation date</a></th>
         <th style="width:10%"><a href="{{pageurl}}&sort=author">Author</a></th>
@@ -125,7 +125,7 @@
       <tr>
         <th classs="manage-column sortable desc" scope="col">ID</th>
         <th classs="manage-column sortable desc" scope="col">Approved?</th>
-        <th classs="manage-column sortable desc" scope="col">Parent</th>
+        <th classs="manage-column sortable desc" scope="col">Duplicate of</th>
         <th classs="manage-column sortable asc" scope="col">Theme</th>
         <th classs="manage-column sortable desc" scope="col">Creation Date</th>
         <th classs="manage-column sortable desc" scope="col">Author</th>
