Mostrando contribuições apenas quando o JS tiver carregado todos os bindings

--- a/templates/admin/govp/listing.html
+++ b/templates/admin/govp/listing.html
@@ -27,7 +27,8 @@
   </div>
 
   <div class="wpgd-status-bar">loading...</div>
-  <table class="wp-list-table widefat fixed audiences" cellspacing="0">
+  <div class="wp-list-table-loading">Loading contributions...</div>
+  <table class="wp-list-table widefat fixed audiences" style="display:none" cellspacing="0">
     <thead>
       <tr>
         <th style="width:5%"><a href="{{pageurl}}&sort=id">ID</a></th>
